@@ -1,6 +1,9 @@
 0.11.101
 	+ Fix typo in CreateClient
 	+ Do not remove quagga and openVPN rc links
+	+ Bugfix. Retrieve rip password in server configuration
+	+ Bugfix. Allow user to remove rip password when disabling ebox-to-ebox
+	  tunnel
 0.11.100
 	+ Bugfix. rip password is not required for normal clients
 	+ Add feature to allow masquerading in VPNs. Now you can use the
